<resources>
    <string name="app_name">VKNewsfeed</string>
    <string name="NEWSFEED">Newsfeed</string>
    <string name="FAVOURITES">Favorites</string>
    <string name="LOG_IN">LogIn</string>
    <string name="LOG_OUT">LogOut</string>
    <string name="NAME">Name</string>
    <string name="DATE">12.12.12</string>
    <string name="NUMBER_LIKES">623</string>
    <string name="TOOLBAR_TITLE_NEWS">Newsfeed</string>
    <string name="CREATE_POST">Create post</string>
    <string name="CREATE">Create</string>
    <string name="CANCEL">Cancel</string>
    <string name="AWESOME">Awesome</string>
    <string name="CANCELED">Canceled</string>
    <string name="POST_MESSAGE">Post message</string>
    <string name="TYPE_MESSAGE">Type message:</string>
    <string name="ATTACH_IMAGE">Attach image</string>
    <string name="DELETE_IMAGE">Delete image</string>
    <string name="SELECT_IMAGE">Select image</string>
    <string name="ADD">Add post</string>
    <string name="EXIT">Exit</string>
    <string name="MANY_REQUESTS">Too many requests per second (0_o)</string>
    <string name="TEXT">
        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
    </string>


    <integer name="com_vk_sdk_AppId">7617205</integer>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TOOLBAR_TITLE_AUTH">Authorization</string>
    <string name="SAVE">Save</string>
    <string name="SAVE_POST_MESSAGE">Save to favourites?</string>
    <string name="DELETE_POST_MESSAGE">Delete from favourites?</string>
    <string name="SUCCESSFUL">Successful</string>
    <string name="DELETE_ALL">Delete all</string>
    <string name="DELETE">Delete</string>
    <string name="NO_SAVED">No saved posts &#128549;</string>
</resources>
